# pyspark-uuid5

./: README.md  pyproject.toml
src/: data_generator.py  research_udf_performance.py
src/string_data/: 100000_rows_with_strings.json
